// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull request resources no extra resources 1`] = `
Array [
  Object {
    "additions": 44,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [tar](https://github.com/npm/node-tar) from 4.4.8 to 4.4.19.
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/npm/node-tar/commit/9a6faa017ca90538840f3ae2ccdb4550ac3f4dcf\\"><code>9a6faa0</code></a> 4.4.19</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/70ef812593184cc54ea1bc74c5dae2d22995002d\\"><code>70ef812</code></a> drop dirCache for symlink on all platforms</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/3e35515c09da615ac268254bed85fe43ee71e2f0\\"><code>3e35515</code></a> 4.4.18</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/52b09e309bcae0c741a7eb79a17ef36e7828b946\\"><code>52b09e3</code></a> fix: prevent path escape using drive-relative paths</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/bb93ba243746f705092905da1955ac3b0509ba1e\\"><code>bb93ba2</code></a> fix: reserve paths properly for unicode, windows</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/2f1bca027286c23e110b8dfc7efc10756fa3db5a\\"><code>2f1bca0</code></a> fix: prune dirCache properly for unicode, windows</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/9bf70a8cf725c3af5fe2270f1e5d2e06d1559b93\\"><code>9bf70a8</code></a> 4.4.17</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/6aafff0a8621ba9509b63654bde28762be373d58\\"><code>6aafff0</code></a> fix: skip extract if linkpath is stripped entirely</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/5c5059a69c2aaaedfe4e9766e102ae9fb79e8255\\"><code>5c5059a</code></a> fix: reserve paths case-insensitively</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/fd6accba697070560f301604b8f5f7e2995a2a8b\\"><code>fd6accb</code></a> 4.4.16</li>
<li>Additional commits viewable in <a href=\\"https://github.com/npm/node-tar/compare/v4.4.8...v4.4.19\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=tar&package-manager=npm_and_yarn&previous-version=4.4.8&new-version=4.4.19)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/40/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-09-01T01:47:42Z",
    "deletions": 44,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/tar-4.4.19",
    "headRefOid": "b0cd5af4c9eac51b42f24d2f79d662d8f21135ef",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0NzIzOTM0MDQy",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 40,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/40",
    "publishedAt": "2021-09-01T01:47:42Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump tar from 4.4.8 to 4.4.19",
    "updatedAt": "2021-09-01T01:47:43Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/40",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [path-parse](https://github.com/jbgutierrez/path-parse) from 1.0.6 to 1.0.7.
<details>
<summary>Commits</summary>
<ul>
<li>See full diff in <a href=\\"https://github.com/jbgutierrez/path-parse/commits/v1.0.7\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=path-parse&package-manager=npm_and_yarn&previous-version=1.0.6&new-version=1.0.7)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/39/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-08-10T22:31:36Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/path-parse-1.0.7",
    "headRefOid": "ef7cf1ef1066657627a2882e1a4bb1260251fbae",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0NzA3NzkyMTg2",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 39,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/39",
    "publishedAt": "2021-08-10T22:31:36Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump path-parse from 1.0.6 to 1.0.7",
    "updatedAt": "2021-08-10T22:31:37Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/39",
  },
  Object {
    "additions": 6,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [ws](https://github.com/websockets/ws) from 5.2.2 to 5.2.3.
<details>
<summary>Release notes</summary>
<p><em>Sourced from <a href=\\"https://github.com/websockets/ws/releases\\">ws's releases</a>.</em></p>
<blockquote>
<h2>5.2.3</h2>
<h1>Bug fixes</h1>
<ul>
<li>Backported 00c425ec to the 5.x release line (76d47c14).</li>
</ul>
</blockquote>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/websockets/ws/commit/6dd88e7e968ef2416445d8f8620c17d99b15c77c\\"><code>6dd88e7</code></a> [dist] 5.2.3</li>
<li><a href=\\"https://github.com/websockets/ws/commit/76d47c1479002022a3e4357b3c9f0e23a68d4cd2\\"><code>76d47c1</code></a> [security] Fix ReDoS vulnerability</li>
<li>See full diff in <a href=\\"https://github.com/websockets/ws/compare/5.2.2...5.2.3\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=ws&package-manager=npm_and_yarn&previous-version=5.2.2&new-version=5.2.3)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/37/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-07-29T16:06:21Z",
    "deletions": 6,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/ws-5.2.3",
    "headRefOid": "550c372ca3cbe1b53ec2ef5a1fa0c564df409ac7",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0Njk5NjYwNzc5",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 37,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/37",
    "publishedAt": "2021-07-29T16:06:21Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump ws from 5.2.2 to 5.2.3",
    "updatedAt": "2021-07-29T16:06:22Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/37",
  },
  Object {
    "additions": 30,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [browserslist](https://github.com/browserslist/browserslist) from 4.4.1 to 4.16.6.
<details>
<summary>Changelog</summary>
<p><em>Sourced from <a href=\\"https://github.com/browserslist/browserslist/blob/main/CHANGELOG.md\\">browserslist's changelog</a>.</em></p>
<blockquote>
<h2>4.16.6</h2>
<ul>
<li>Fixed <code>npm-shrinkwrap.json</code> support in <code>--update-db</code> (by Geoff Newman).</li>
</ul>
<h2>4.16.5</h2>
<ul>
<li>Fixed unsafe RegExp (by Yeting Li).</li>
</ul>
<h2>4.16.4</h2>
<ul>
<li>Fixed unsafe RegExp.</li>
<li>Added artifactory support to <code>--update-db</code> (by Ittai Baratz).</li>
</ul>
<h2>4.16.3</h2>
<ul>
<li>Fixed <code>--update-db</code>.</li>
</ul>
<h2>4.16.2</h2>
<ul>
<li>Fixed <code>--update-db</code> (by <a href=\\"https://github.com/ialarmedalien\\"><code>@​ialarmedalien</code></a>).</li>
</ul>
<h2>4.16.1</h2>
<ul>
<li>Fixed Chrome 4 with <code>mobileToDesktop</code> (by Aron Woost).</li>
</ul>
<h2>4.16</h2>
<ul>
<li>Add <code>browserslist config</code> query.</li>
</ul>
<h2>4.15</h2>
<ul>
<li>Add TypeScript types (by Dmitry Semigradsky).</li>
</ul>
<h2>4.14.7</h2>
<ul>
<li>Fixed Yarn Workspaces support to <code>--update-db</code> (by Fausto Núñez Alberro).</li>
<li>Added browser changes to <code>--update-db</code> (by <a href=\\"https://github.com/AleksandrSl\\"><code>@​AleksandrSl</code></a>).</li>
<li>Added color output to <code>--update-db</code>.</li>
<li>Updated <code>package.funding</code> to have link to our Open Collective.</li>
</ul>
<h2>4.14.6</h2>
<ul>
<li>Fixed Yarn support in <code>--update-db</code> (by Ivan Storck).</li>
<li>Fixed npm 7 support in <code>--update-db</code>.</li>
</ul>
<h2>4.14.5</h2>
<ul>
<li>Fixed <code>last 2 electron versions</code> query (by Sergey Melyukov).</li>
</ul>
<h2>4.14.4</h2>
<ul>
<li>Fixed <code>Unknown version 59 of op_mob</code> error.</li>
</ul>
<h2>4.14.3</h2>
<ul>
<li>Update Firefox ESR.</li>
</ul>
<h2>4.14.2</h2>
<ul>
<li>Fixed <code>--update-db</code> on Windows (by James Ross).</li>
<li>Improved <code>--update-db</code> output.</li>
</ul>
<h2>4.14.1</h2>
<ul>
<li>Added <code>--update-db</code> explanation (by Justin Zelinsky).</li>
</ul>
<!-- raw HTML omitted -->
</blockquote>
<p>... (truncated)</p>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/6fe3614db05b40f9dc1c63588a83d2ada05bae75\\"><code>6fe3614</code></a> Release 4.16.6 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/33ebac933839847a62ede680273449f6cdca1e18\\"><code>33ebac9</code></a> Update dependencies</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/2128170f231a6c9f462276006e09f302d811df31\\"><code>2128170</code></a> Add support for npm-shrinkwrap files alongside package-lock (<a href=\\"https://github-redirect.dependabot.com/browserslist/browserslist/issues/595\\">#595</a>)</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/7cc2aedd0047d800d44aa0259c02b6db1414105c\\"><code>7cc2aed</code></a> Release 4.16.5 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/27e4afdc68798ca93f8c01c5ea6208b4b361a704\\"><code>27e4afd</code></a> Update dependencies</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/1013a1847931a209c34a704aebc85a8c091286e7\\"><code>1013a18</code></a> Fix version RegExp</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/b879a1a304def2563f42cc3d3f5711e760662be3\\"><code>b879a1a</code></a> Use Node.js 16 on CI</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/bd1e9e01c95cad24be706fb11be7d151cd99ed0a\\"><code>bd1e9e0</code></a> Fix ReDoS (<a href=\\"https://github-redirect.dependabot.com/browserslist/browserslist/issues/593\\">#593</a>)</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/209adf9e0051fa39a2b25354cffd493300f34b02\\"><code>209adf9</code></a> Release 4.16.4 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/3e2ae3b52daf7f5203247fd4f583b3bda66ea57d\\"><code>3e2ae3b</code></a> Fix types</li>
<li>Additional commits viewable in <a href=\\"https://github.com/browserslist/browserslist/compare/4.4.1...4.16.6\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=browserslist&package-manager=npm_and_yarn&previous-version=4.4.1&new-version=4.16.6)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/36/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-05-25T00:51:14Z",
    "deletions": 20,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/browserslist-4.16.6",
    "headRefOid": "010c9cefbbfc8af6f3ade2889d8a827e4231cc93",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0NjUxNzQzNDky",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 36,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/36",
    "publishedAt": "2021-05-25T00:51:14Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump browserslist from 4.4.1 to 4.16.6",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/36",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [hosted-git-info](https://github.com/npm/hosted-git-info) from 2.7.1 to 2.8.9.
<details>
<summary>Changelog</summary>
<p><em>Sourced from <a href=\\"https://github.com/npm/hosted-git-info/blob/v2.8.9/CHANGELOG.md\\">hosted-git-info's changelog</a>.</em></p>
<blockquote>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.8...v2.8.9\\">2.8.9</a> (2021-04-07)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>backport regex fix from <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/76\\">#76</a> (<a href=\\"https://github.com/npm/hosted-git-info/commit/29adfe5\\">29adfe5</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/84\\">#84</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.7...v2.8.8\\">2.8.8</a> (2020-02-29)</h2>
<h3>Bug Fixes</h3>
<ul>
<li><a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> &amp; <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/65\\">#65</a> addressing issues w/ url.URL implmentation which regressed node 6 support (<a href=\\"https://github.com/npm/hosted-git-info/commit/5038b18\\">5038b18</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/66\\">#66</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.6...v2.8.7\\">2.8.7</a> (2020-02-26)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>Do not attempt to use url.URL when unavailable (<a href=\\"https://github.com/npm/hosted-git-info/commit/2d0bb66\\">2d0bb66</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/62\\">#62</a></li>
<li>Do not pass scp-style URLs to the WhatWG url.URL (<a href=\\"https://github.com/npm/hosted-git-info/commit/f2cdfcf\\">f2cdfcf</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/60\\">#60</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.5...v2.8.6\\">2.8.6</a> (2020-02-25)</h2>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.4...v2.8.5\\">2.8.5</a> (2019-10-07)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>updated pathmatch for gitlab (<a href=\\"https://github.com/npm/hosted-git-info/commit/e8325b5\\">e8325b5</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/51\\">#51</a></li>
<li>updated pathmatch for gitlab (<a href=\\"https://github.com/npm/hosted-git-info/commit/ffe056f\\">ffe056f</a>)</li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.3...v2.8.4\\">2.8.4</a> (2019-08-12)</h2>
<!-- raw HTML omitted -->
</blockquote>
<p>... (truncated)</p>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/8d4b3697d79bcd89cdb36d1db165e3696c783a01\\"><code>8d4b369</code></a> chore(release): 2.8.9</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/29adfe5ef789784c861b2cdeb15051ec2ba651a7\\"><code>29adfe5</code></a> fix: backport regex fix from <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/76\\">#76</a></li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/afeaefdd86ba9bb5044be3c1554a666d007cf19a\\"><code>afeaefd</code></a> chore(release): 2.8.8</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/5038b1891a61ca3cd7453acbf85d7011fe0086bb\\"><code>5038b18</code></a> fix: <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> &amp; <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/65\\">#65</a> addressing issues w/ url.URL implmentation which regressed nod...</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/7440afa859162051c191e55d8ecfaf69a193b026\\"><code>7440afa</code></a> chore(release): 2.8.7</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/2d0bb6615ecb8f9ef1019bc0737aab7f6449641f\\"><code>2d0bb66</code></a> fix: Do not attempt to use url.URL when unavailable</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/f2cdfcf33ad2bd3bd1acdba0326281089f53c5b1\\"><code>f2cdfcf</code></a> fix: Do not pass scp-style URLs to the WhatWG url.URL</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/e1b83df5d9cb1f8bb220352e20565560548d2292\\"><code>e1b83df</code></a> chore(release): 2.8.6</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/ff259a6117c62df488e927820e30bec2f7ee453f\\"><code>ff259a6</code></a> Ensure passwords in hosted Git URLs are correctly escaped</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/624fd6f301dd5a1fd7ad1b333d6f8921a12ff98c\\"><code>624fd6f</code></a> chore(release): 2.8.5</li>
<li>Additional commits viewable in <a href=\\"https://github.com/npm/hosted-git-info/compare/v2.7.1...v2.8.9\\">compare view</a></li>
</ul>
</details>
<details>
<summary>Maintainer changes</summary>
<p>This version was pushed to npm by <a href=\\"https://www.npmjs.com/~nlf\\">nlf</a>, a new releaser for hosted-git-info since your current version.</p>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=hosted-git-info&package-manager=npm_and_yarn&previous-version=2.7.1&new-version=2.8.9)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/35/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-05-10T01:54:34Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/hosted-git-info-2.8.9",
    "headRefOid": "b5e4114a24b183e2e564208e180f91c4afc35eed",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0NjM2NjUzMTY2",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 35,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/35",
    "publishedAt": "2021-05-10T01:54:34Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump hosted-git-info from 2.7.1 to 2.8.9",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/35",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "body": "Bumps [lodash](https://github.com/lodash/lodash) from 4.17.14 to 4.17.21.
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/lodash/lodash/commit/f299b52f39486275a9e6483b60a410e06520c538\\"><code>f299b52</code></a> Bump to v4.17.21</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/c4847ebe7d14540bb28a8b932a9ce1b9ecbfee1a\\"><code>c4847eb</code></a> Improve performance of <code>toNumber</code>, <code>trim</code> and <code>trimEnd</code> on large input strings</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/3469357cff396a26c363f8c1b5a91dde28ba4b1c\\"><code>3469357</code></a> Prevent command injection through <code>_.template</code>'s <code>variable</code> option</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/ded9bc66583ed0b4e3b7dc906206d40757b4a90a\\"><code>ded9bc6</code></a> Bump to v4.17.20.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/63150ef7645ac07961b63a86490f419f356429aa\\"><code>63150ef</code></a> Documentation fixes.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/00f0f62a979d2f5fa0287c06eae70cf9a62d8794\\"><code>00f0f62</code></a> test.js: Remove trailing comma.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/846e434c7a5b5692c55ebf5715ed677b70a32389\\"><code>846e434</code></a> Temporarily use a custom fork of <code>lodash-cli</code>.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/5d046f39cbd27f573914768e3b36eeefcc4f1229\\"><code>5d046f3</code></a> Re-enable Travis tests on <code>4.17</code> branch.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/aa816b36d402a1ad9385142ce7188f17dae514fd\\"><code>aa816b3</code></a> Remove <code>/npm-package</code>.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/d7fbc52ee0466a6d248f047b5d5c3e6d1e099056\\"><code>d7fbc52</code></a> Bump to v4.17.19</li>
<li>Additional commits viewable in <a href=\\"https://github.com/lodash/lodash/compare/4.17.14...4.17.21\\">compare view</a></li>
</ul>
</details>
<details>
<summary>Maintainer changes</summary>
<p>This version was pushed to npm by <a href=\\"https://www.npmjs.com/~bnjmnt4n\\">bnjmnt4n</a>, a new releaser for lodash since your current version.</p>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=lodash&package-manager=npm_and_yarn&previous-version=4.17.14&new-version=4.17.21)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/34/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [],
    "createdAt": "2021-05-08T07:53:30Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/lodash-4.17.21",
    "headRefOid": "8edbe665b9972156c04e8d9c15d4807001ba5982",
    "headRepository": Object {
      "name": "graph-whitehat",
      "nameWithOwner": "JupiterOne/graph-whitehat",
      "owner": Object {},
    },
    "id": "MDExOlB1bGxSZXF1ZXN0NjM0MTIwNDU4",
    "isDraft": false,
    "labels": Array [],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 34,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/34",
    "publishedAt": "2021-05-08T07:53:30Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump lodash from 4.17.14 to 4.17.21",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/34",
  },
]
`;

exports[`pull request resources pullRequest pagination only 1`] = `
Array [
  Object {
    "additions": 44,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [tar](https://github.com/npm/node-tar) from 4.4.8 to 4.4.19.
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/npm/node-tar/commit/9a6faa017ca90538840f3ae2ccdb4550ac3f4dcf\\"><code>9a6faa0</code></a> 4.4.19</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/70ef812593184cc54ea1bc74c5dae2d22995002d\\"><code>70ef812</code></a> drop dirCache for symlink on all platforms</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/3e35515c09da615ac268254bed85fe43ee71e2f0\\"><code>3e35515</code></a> 4.4.18</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/52b09e309bcae0c741a7eb79a17ef36e7828b946\\"><code>52b09e3</code></a> fix: prevent path escape using drive-relative paths</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/bb93ba243746f705092905da1955ac3b0509ba1e\\"><code>bb93ba2</code></a> fix: reserve paths properly for unicode, windows</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/2f1bca027286c23e110b8dfc7efc10756fa3db5a\\"><code>2f1bca0</code></a> fix: prune dirCache properly for unicode, windows</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/9bf70a8cf725c3af5fe2270f1e5d2e06d1559b93\\"><code>9bf70a8</code></a> 4.4.17</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/6aafff0a8621ba9509b63654bde28762be373d58\\"><code>6aafff0</code></a> fix: skip extract if linkpath is stripped entirely</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/5c5059a69c2aaaedfe4e9766e102ae9fb79e8255\\"><code>5c5059a</code></a> fix: reserve paths case-insensitively</li>
<li><a href=\\"https://github.com/npm/node-tar/commit/fd6accba697070560f301604b8f5f7e2995a2a8b\\"><code>fd6accb</code></a> 4.4.16</li>
<li>Additional commits viewable in <a href=\\"https://github.com/npm/node-tar/compare/v4.4.8...v4.4.19\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=tar&package-manager=npm_and_yarn&previous-version=4.4.8&new-version=4.4.19)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/40/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-09-01T01:47:41Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/b0cd5af4c9eac51b42f24d2f79d662d8f21135ef",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OmIwY2Q1YWY0YzllYWM1MWI0MmYyNGQyZjc5ZDY2MmQ4ZjIxMTM1ZWY=",
        "message": "Bump tar from 4.4.8 to 4.4.19

Bumps [tar](https://github.com/npm/node-tar) from 4.4.8 to 4.4.19.
- [Release notes](https://github.com/npm/node-tar/releases)
- [Changelog](https://github.com/npm/node-tar/blob/main/CHANGELOG.md)
- [Commits](https://github.com/npm/node-tar/compare/v4.4.8...v4.4.19)

---
updated-dependencies:
- dependency-name: tar
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-09-01T01:47:42Z",
      },
    ],
    "createdAt": "2021-09-01T01:47:42Z",
    "deletions": 44,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/tar-4.4.19",
    "headRefOid": "b0cd5af4c9eac51b42f24d2f79d662d8f21135ef",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 40,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/40",
    "publishedAt": "2021-09-01T01:47:42Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump tar from 4.4.8 to 4.4.19",
    "updatedAt": "2021-09-01T01:47:43Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/40",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [path-parse](https://github.com/jbgutierrez/path-parse) from 1.0.6 to 1.0.7.
<details>
<summary>Commits</summary>
<ul>
<li>See full diff in <a href=\\"https://github.com/jbgutierrez/path-parse/commits/v1.0.7\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=path-parse&package-manager=npm_and_yarn&previous-version=1.0.6&new-version=1.0.7)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/39/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-08-10T22:31:36Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/ef7cf1ef1066657627a2882e1a4bb1260251fbae",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OmVmN2NmMWVmMTA2NjY1NzYyN2EyODgyZTFhNGJiMTI2MDI1MWZiYWU=",
        "message": "Bump path-parse from 1.0.6 to 1.0.7

Bumps [path-parse](https://github.com/jbgutierrez/path-parse) from 1.0.6 to 1.0.7.
- [Release notes](https://github.com/jbgutierrez/path-parse/releases)
- [Commits](https://github.com/jbgutierrez/path-parse/commits/v1.0.7)

---
updated-dependencies:
- dependency-name: path-parse
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-08-10T22:31:37Z",
      },
    ],
    "createdAt": "2021-08-10T22:31:36Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/path-parse-1.0.7",
    "headRefOid": "ef7cf1ef1066657627a2882e1a4bb1260251fbae",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 39,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/39",
    "publishedAt": "2021-08-10T22:31:36Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump path-parse from 1.0.6 to 1.0.7",
    "updatedAt": "2021-08-10T22:31:37Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/39",
  },
  Object {
    "additions": 6,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [ws](https://github.com/websockets/ws) from 5.2.2 to 5.2.3.
<details>
<summary>Release notes</summary>
<p><em>Sourced from <a href=\\"https://github.com/websockets/ws/releases\\">ws's releases</a>.</em></p>
<blockquote>
<h2>5.2.3</h2>
<h1>Bug fixes</h1>
<ul>
<li>Backported 00c425ec to the 5.x release line (76d47c14).</li>
</ul>
</blockquote>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/websockets/ws/commit/6dd88e7e968ef2416445d8f8620c17d99b15c77c\\"><code>6dd88e7</code></a> [dist] 5.2.3</li>
<li><a href=\\"https://github.com/websockets/ws/commit/76d47c1479002022a3e4357b3c9f0e23a68d4cd2\\"><code>76d47c1</code></a> [security] Fix ReDoS vulnerability</li>
<li>See full diff in <a href=\\"https://github.com/websockets/ws/compare/5.2.2...5.2.3\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=ws&package-manager=npm_and_yarn&previous-version=5.2.2&new-version=5.2.3)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/37/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-07-29T16:06:20Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/550c372ca3cbe1b53ec2ef5a1fa0c564df409ac7",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OjU1MGMzNzJjYTNjYmUxYjUzZWMyZWY1YTFmYTBjNTY0ZGY0MDlhYzc=",
        "message": "Bump ws from 5.2.2 to 5.2.3

Bumps [ws](https://github.com/websockets/ws) from 5.2.2 to 5.2.3.
- [Release notes](https://github.com/websockets/ws/releases)
- [Commits](https://github.com/websockets/ws/compare/5.2.2...5.2.3)

---
updated-dependencies:
- dependency-name: ws
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-07-29T16:06:21Z",
      },
    ],
    "createdAt": "2021-07-29T16:06:21Z",
    "deletions": 6,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/ws-5.2.3",
    "headRefOid": "550c372ca3cbe1b53ec2ef5a1fa0c564df409ac7",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 37,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/37",
    "publishedAt": "2021-07-29T16:06:21Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump ws from 5.2.2 to 5.2.3",
    "updatedAt": "2021-07-29T16:06:22Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/37",
  },
  Object {
    "additions": 30,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [browserslist](https://github.com/browserslist/browserslist) from 4.4.1 to 4.16.6.
<details>
<summary>Changelog</summary>
<p><em>Sourced from <a href=\\"https://github.com/browserslist/browserslist/blob/main/CHANGELOG.md\\">browserslist's changelog</a>.</em></p>
<blockquote>
<h2>4.16.6</h2>
<ul>
<li>Fixed <code>npm-shrinkwrap.json</code> support in <code>--update-db</code> (by Geoff Newman).</li>
</ul>
<h2>4.16.5</h2>
<ul>
<li>Fixed unsafe RegExp (by Yeting Li).</li>
</ul>
<h2>4.16.4</h2>
<ul>
<li>Fixed unsafe RegExp.</li>
<li>Added artifactory support to <code>--update-db</code> (by Ittai Baratz).</li>
</ul>
<h2>4.16.3</h2>
<ul>
<li>Fixed <code>--update-db</code>.</li>
</ul>
<h2>4.16.2</h2>
<ul>
<li>Fixed <code>--update-db</code> (by <a href=\\"https://github.com/ialarmedalien\\"><code>@​ialarmedalien</code></a>).</li>
</ul>
<h2>4.16.1</h2>
<ul>
<li>Fixed Chrome 4 with <code>mobileToDesktop</code> (by Aron Woost).</li>
</ul>
<h2>4.16</h2>
<ul>
<li>Add <code>browserslist config</code> query.</li>
</ul>
<h2>4.15</h2>
<ul>
<li>Add TypeScript types (by Dmitry Semigradsky).</li>
</ul>
<h2>4.14.7</h2>
<ul>
<li>Fixed Yarn Workspaces support to <code>--update-db</code> (by Fausto Núñez Alberro).</li>
<li>Added browser changes to <code>--update-db</code> (by <a href=\\"https://github.com/AleksandrSl\\"><code>@​AleksandrSl</code></a>).</li>
<li>Added color output to <code>--update-db</code>.</li>
<li>Updated <code>package.funding</code> to have link to our Open Collective.</li>
</ul>
<h2>4.14.6</h2>
<ul>
<li>Fixed Yarn support in <code>--update-db</code> (by Ivan Storck).</li>
<li>Fixed npm 7 support in <code>--update-db</code>.</li>
</ul>
<h2>4.14.5</h2>
<ul>
<li>Fixed <code>last 2 electron versions</code> query (by Sergey Melyukov).</li>
</ul>
<h2>4.14.4</h2>
<ul>
<li>Fixed <code>Unknown version 59 of op_mob</code> error.</li>
</ul>
<h2>4.14.3</h2>
<ul>
<li>Update Firefox ESR.</li>
</ul>
<h2>4.14.2</h2>
<ul>
<li>Fixed <code>--update-db</code> on Windows (by James Ross).</li>
<li>Improved <code>--update-db</code> output.</li>
</ul>
<h2>4.14.1</h2>
<ul>
<li>Added <code>--update-db</code> explanation (by Justin Zelinsky).</li>
</ul>
<!-- raw HTML omitted -->
</blockquote>
<p>... (truncated)</p>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/6fe3614db05b40f9dc1c63588a83d2ada05bae75\\"><code>6fe3614</code></a> Release 4.16.6 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/33ebac933839847a62ede680273449f6cdca1e18\\"><code>33ebac9</code></a> Update dependencies</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/2128170f231a6c9f462276006e09f302d811df31\\"><code>2128170</code></a> Add support for npm-shrinkwrap files alongside package-lock (<a href=\\"https://github-redirect.dependabot.com/browserslist/browserslist/issues/595\\">#595</a>)</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/7cc2aedd0047d800d44aa0259c02b6db1414105c\\"><code>7cc2aed</code></a> Release 4.16.5 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/27e4afdc68798ca93f8c01c5ea6208b4b361a704\\"><code>27e4afd</code></a> Update dependencies</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/1013a1847931a209c34a704aebc85a8c091286e7\\"><code>1013a18</code></a> Fix version RegExp</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/b879a1a304def2563f42cc3d3f5711e760662be3\\"><code>b879a1a</code></a> Use Node.js 16 on CI</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/bd1e9e01c95cad24be706fb11be7d151cd99ed0a\\"><code>bd1e9e0</code></a> Fix ReDoS (<a href=\\"https://github-redirect.dependabot.com/browserslist/browserslist/issues/593\\">#593</a>)</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/209adf9e0051fa39a2b25354cffd493300f34b02\\"><code>209adf9</code></a> Release 4.16.4 version</li>
<li><a href=\\"https://github.com/browserslist/browserslist/commit/3e2ae3b52daf7f5203247fd4f583b3bda66ea57d\\"><code>3e2ae3b</code></a> Fix types</li>
<li>Additional commits viewable in <a href=\\"https://github.com/browserslist/browserslist/compare/4.4.1...4.16.6\\">compare view</a></li>
</ul>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=browserslist&package-manager=npm_and_yarn&previous-version=4.4.1&new-version=4.16.6)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/36/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-05-25T00:51:13Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/010c9cefbbfc8af6f3ade2889d8a827e4231cc93",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OjAxMGM5Y2VmYmJmYzhhZjZmM2FkZTI4ODlkOGE4MjdlNDIzMWNjOTM=",
        "message": "Bump browserslist from 4.4.1 to 4.16.6

Bumps [browserslist](https://github.com/browserslist/browserslist) from 4.4.1 to 4.16.6.
- [Release notes](https://github.com/browserslist/browserslist/releases)
- [Changelog](https://github.com/browserslist/browserslist/blob/main/CHANGELOG.md)
- [Commits](https://github.com/browserslist/browserslist/compare/4.4.1...4.16.6)

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-05-25T00:51:14Z",
      },
    ],
    "createdAt": "2021-05-25T00:51:14Z",
    "deletions": 20,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/browserslist-4.16.6",
    "headRefOid": "010c9cefbbfc8af6f3ade2889d8a827e4231cc93",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 36,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/36",
    "publishedAt": "2021-05-25T00:51:14Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump browserslist from 4.4.1 to 4.16.6",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/36",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [hosted-git-info](https://github.com/npm/hosted-git-info) from 2.7.1 to 2.8.9.
<details>
<summary>Changelog</summary>
<p><em>Sourced from <a href=\\"https://github.com/npm/hosted-git-info/blob/v2.8.9/CHANGELOG.md\\">hosted-git-info's changelog</a>.</em></p>
<blockquote>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.8...v2.8.9\\">2.8.9</a> (2021-04-07)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>backport regex fix from <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/76\\">#76</a> (<a href=\\"https://github.com/npm/hosted-git-info/commit/29adfe5\\">29adfe5</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/84\\">#84</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.7...v2.8.8\\">2.8.8</a> (2020-02-29)</h2>
<h3>Bug Fixes</h3>
<ul>
<li><a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> &amp; <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/65\\">#65</a> addressing issues w/ url.URL implmentation which regressed node 6 support (<a href=\\"https://github.com/npm/hosted-git-info/commit/5038b18\\">5038b18</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/66\\">#66</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.6...v2.8.7\\">2.8.7</a> (2020-02-26)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>Do not attempt to use url.URL when unavailable (<a href=\\"https://github.com/npm/hosted-git-info/commit/2d0bb66\\">2d0bb66</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/62\\">#62</a></li>
<li>Do not pass scp-style URLs to the WhatWG url.URL (<a href=\\"https://github.com/npm/hosted-git-info/commit/f2cdfcf\\">f2cdfcf</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/60\\">#60</a></li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.5...v2.8.6\\">2.8.6</a> (2020-02-25)</h2>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.4...v2.8.5\\">2.8.5</a> (2019-10-07)</h2>
<h3>Bug Fixes</h3>
<ul>
<li>updated pathmatch for gitlab (<a href=\\"https://github.com/npm/hosted-git-info/commit/e8325b5\\">e8325b5</a>), closes <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/51\\">#51</a></li>
<li>updated pathmatch for gitlab (<a href=\\"https://github.com/npm/hosted-git-info/commit/ffe056f\\">ffe056f</a>)</li>
</ul>
<p><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
<h2><a href=\\"https://github.com/npm/hosted-git-info/compare/v2.8.3...v2.8.4\\">2.8.4</a> (2019-08-12)</h2>
<!-- raw HTML omitted -->
</blockquote>
<p>... (truncated)</p>
</details>
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/8d4b3697d79bcd89cdb36d1db165e3696c783a01\\"><code>8d4b369</code></a> chore(release): 2.8.9</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/29adfe5ef789784c861b2cdeb15051ec2ba651a7\\"><code>29adfe5</code></a> fix: backport regex fix from <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/76\\">#76</a></li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/afeaefdd86ba9bb5044be3c1554a666d007cf19a\\"><code>afeaefd</code></a> chore(release): 2.8.8</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/5038b1891a61ca3cd7453acbf85d7011fe0086bb\\"><code>5038b18</code></a> fix: <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/61\\">#61</a> &amp; <a href=\\"https://github-redirect.dependabot.com/npm/hosted-git-info/issues/65\\">#65</a> addressing issues w/ url.URL implmentation which regressed nod...</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/7440afa859162051c191e55d8ecfaf69a193b026\\"><code>7440afa</code></a> chore(release): 2.8.7</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/2d0bb6615ecb8f9ef1019bc0737aab7f6449641f\\"><code>2d0bb66</code></a> fix: Do not attempt to use url.URL when unavailable</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/f2cdfcf33ad2bd3bd1acdba0326281089f53c5b1\\"><code>f2cdfcf</code></a> fix: Do not pass scp-style URLs to the WhatWG url.URL</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/e1b83df5d9cb1f8bb220352e20565560548d2292\\"><code>e1b83df</code></a> chore(release): 2.8.6</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/ff259a6117c62df488e927820e30bec2f7ee453f\\"><code>ff259a6</code></a> Ensure passwords in hosted Git URLs are correctly escaped</li>
<li><a href=\\"https://github.com/npm/hosted-git-info/commit/624fd6f301dd5a1fd7ad1b333d6f8921a12ff98c\\"><code>624fd6f</code></a> chore(release): 2.8.5</li>
<li>Additional commits viewable in <a href=\\"https://github.com/npm/hosted-git-info/compare/v2.7.1...v2.8.9\\">compare view</a></li>
</ul>
</details>
<details>
<summary>Maintainer changes</summary>
<p>This version was pushed to npm by <a href=\\"https://www.npmjs.com/~nlf\\">nlf</a>, a new releaser for hosted-git-info since your current version.</p>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=hosted-git-info&package-manager=npm_and_yarn&previous-version=2.7.1&new-version=2.8.9)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/35/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-05-10T01:54:33Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/b5e4114a24b183e2e564208e180f91c4afc35eed",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OmI1ZTQxMTRhMjRiMTgzZTJlNTY0MjA4ZTE4MGY5MWM0YWZjMzVlZWQ=",
        "message": "Bump hosted-git-info from 2.7.1 to 2.8.9

Bumps [hosted-git-info](https://github.com/npm/hosted-git-info) from 2.7.1 to 2.8.9.
- [Release notes](https://github.com/npm/hosted-git-info/releases)
- [Changelog](https://github.com/npm/hosted-git-info/blob/v2.8.9/CHANGELOG.md)
- [Commits](https://github.com/npm/hosted-git-info/compare/v2.7.1...v2.8.9)

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-05-10T01:54:33Z",
      },
    ],
    "createdAt": "2021-05-10T01:54:34Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/hosted-git-info-2.8.9",
    "headRefOid": "b5e4114a24b183e2e564208e180f91c4afc35eed",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 35,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/35",
    "publishedAt": "2021-05-10T01:54:34Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump hosted-git-info from 2.7.1 to 2.8.9",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/35",
  },
  Object {
    "additions": 3,
    "author": Object {},
    "authorAssociation": "CONTRIBUTOR",
    "baseRefName": "main",
    "baseRefOid": "4f2c15b0346be5f56755bc0291f2d387bec6bd21",
    "baseRepository": Object {
      "id": "MDEwOlJlcG9zaXRvcnkxNzE5MTExMzk=",
      "name": "graph-whitehat",
    },
    "body": "Bumps [lodash](https://github.com/lodash/lodash) from 4.17.14 to 4.17.21.
<details>
<summary>Commits</summary>
<ul>
<li><a href=\\"https://github.com/lodash/lodash/commit/f299b52f39486275a9e6483b60a410e06520c538\\"><code>f299b52</code></a> Bump to v4.17.21</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/c4847ebe7d14540bb28a8b932a9ce1b9ecbfee1a\\"><code>c4847eb</code></a> Improve performance of <code>toNumber</code>, <code>trim</code> and <code>trimEnd</code> on large input strings</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/3469357cff396a26c363f8c1b5a91dde28ba4b1c\\"><code>3469357</code></a> Prevent command injection through <code>_.template</code>'s <code>variable</code> option</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/ded9bc66583ed0b4e3b7dc906206d40757b4a90a\\"><code>ded9bc6</code></a> Bump to v4.17.20.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/63150ef7645ac07961b63a86490f419f356429aa\\"><code>63150ef</code></a> Documentation fixes.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/00f0f62a979d2f5fa0287c06eae70cf9a62d8794\\"><code>00f0f62</code></a> test.js: Remove trailing comma.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/846e434c7a5b5692c55ebf5715ed677b70a32389\\"><code>846e434</code></a> Temporarily use a custom fork of <code>lodash-cli</code>.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/5d046f39cbd27f573914768e3b36eeefcc4f1229\\"><code>5d046f3</code></a> Re-enable Travis tests on <code>4.17</code> branch.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/aa816b36d402a1ad9385142ce7188f17dae514fd\\"><code>aa816b3</code></a> Remove <code>/npm-package</code>.</li>
<li><a href=\\"https://github.com/lodash/lodash/commit/d7fbc52ee0466a6d248f047b5d5c3e6d1e099056\\"><code>d7fbc52</code></a> Bump to v4.17.19</li>
<li>Additional commits viewable in <a href=\\"https://github.com/lodash/lodash/compare/4.17.14...4.17.21\\">compare view</a></li>
</ul>
</details>
<details>
<summary>Maintainer changes</summary>
<p>This version was pushed to npm by <a href=\\"https://www.npmjs.com/~bnjmnt4n\\">bnjmnt4n</a>, a new releaser for lodash since your current version.</p>
</details>
<br />


[![Dependabot compatibility score](https://dependabot-badges.githubapp.com/badges/compatibility_score?dependency-name=lodash&package-manager=npm_and_yarn&previous-version=4.17.14&new-version=4.17.21)](https://docs.github.com/en/github/managing-security-vulnerabilities/about-dependabot-security-updates#about-compatibility-scores)

Dependabot will resolve any conflicts with this PR as long as you don't alter it yourself. You can also trigger a rebase manually by commenting \`@dependabot rebase\`.

[//]: # (dependabot-automerge-start)
[//]: # (dependabot-automerge-end)

---

<details>
<summary>Dependabot commands and options</summary>
<br />

You can trigger Dependabot actions by commenting on this PR:
- \`@dependabot rebase\` will rebase this PR
- \`@dependabot recreate\` will recreate this PR, overwriting any edits that have been made to it
- \`@dependabot merge\` will merge this PR after your CI passes on it
- \`@dependabot squash and merge\` will squash and merge this PR after your CI passes on it
- \`@dependabot cancel merge\` will cancel a previously requested merge and block automerging
- \`@dependabot reopen\` will reopen this PR if it is closed
- \`@dependabot close\` will close this PR and stop Dependabot recreating it. You can achieve the same result by closing it manually
- \`@dependabot ignore this major version\` will close this PR and stop Dependabot creating any more for this major version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this minor version\` will close this PR and stop Dependabot creating any more for this minor version (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot ignore this dependency\` will close this PR and stop Dependabot creating any more for this dependency (unless you reopen the PR or upgrade to it yourself)
- \`@dependabot use these labels\` will set the current labels as the default for future PRs for this repo and language
- \`@dependabot use these reviewers\` will set the current reviewers as the default for future PRs for this repo and language
- \`@dependabot use these assignees\` will set the current assignees as the default for future PRs for this repo and language
- \`@dependabot use this milestone\` will set the current milestone as the default for future PRs for this repo and language

You can disable automated security fix PRs for this repo from the [Security Alerts page](https://github.com/JupiterOne/graph-whitehat/network/alerts).

</details>",
    "changedFiles": 1,
    "checksUrl": "https://github.com/JupiterOne/graph-whitehat/pull/34/checks",
    "closed": false,
    "closedAt": null,
    "commits": Array [
      Object {
        "author": Object {
          "date": "2021-05-08T07:53:29Z",
          "user": Object {
            "isSiteAdmin": false,
            "login": "dependabot[bot]",
            "name": null,
          },
        },
        "changedFiles": 1,
        "commitUrl": "https://github.com/JupiterOne/graph-whitehat/commit/8edbe665b9972156c04e8d9c15d4807001ba5982",
        "id": "MDY6Q29tbWl0MTcxOTExMTM5OjhlZGJlNjY1Yjk5NzIxNTZjMDRlOGQ5YzE1ZDQ4MDcwMDFiYTU5ODI=",
        "message": "Bump lodash from 4.17.14 to 4.17.21

Bumps [lodash](https://github.com/lodash/lodash) from 4.17.14 to 4.17.21.
- [Release notes](https://github.com/lodash/lodash/releases)
- [Commits](https://github.com/lodash/lodash/compare/4.17.14...4.17.21)

Signed-off-by: dependabot[bot] <support@github.com>",
        "pushedDate": "2021-05-08T07:53:30Z",
      },
    ],
    "createdAt": "2021-05-08T07:53:30Z",
    "deletions": 3,
    "editor": null,
    "headRefName": "dependabot/npm_and_yarn/lodash-4.17.21",
    "headRefOid": "8edbe665b9972156c04e8d9c15d4807001ba5982",
    "headRepository": Object {
      "name": "graph-whitehat",
      "owner": Object {},
    },
    "isDraft": false,
    "labels": Array [
      Object {
        "id": "MDU6TGFiZWwxMzkyNTgzMjM5",
        "name": "dependencies",
        "node": undefined,
        "pullRequests": undefined,
      },
    ],
    "lastEditedAt": null,
    "locked": false,
    "mergeCommit": null,
    "mergeable": "MERGEABLE",
    "merged": false,
    "mergedAt": null,
    "mergedBy": null,
    "number": 34,
    "permalink": "https://github.com/JupiterOne/graph-whitehat/pull/34",
    "publishedAt": "2021-05-08T07:53:30Z",
    "reviewDecision": "REVIEW_REQUIRED",
    "reviews": Array [],
    "state": "OPEN",
    "title": "Bump lodash from 4.17.14 to 4.17.21",
    "updatedAt": "2021-07-29T16:05:25Z",
    "url": "https://github.com/JupiterOne/graph-whitehat/pull/34",
  },
]
`;
